--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- faveicon -->
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="img/logo.ico" />
 
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
@@ -39,7 +39,7 @@
       <div class="container">
         <a class="navbar-brand" href="#beranda">
           <img
-            src="img/logo.jpeg"
+            src="img/logo.ico"
             alt="logo"
             width="30"
             class="d-inline-block align-text-top me-3"
@@ -125,7 +125,7 @@
         </div>
         <div class="row fs-5 mt-3">
           <div class="col-md mb-3 tentang-kami-img">
-            <img src="/img/tantangkami.png" alt="img-tentangkami" />
+            <img src="img/tantangkami.png" alt="img-tentangkami" />
           </div>
           <div class="col-md text-tentangkami mt-5">
             <h3>Rainbow Kids <span>Alauddin</span></h3>
@@ -296,42 +296,42 @@
         <div class="row gallery-box text-center mt-3">
           <div class="col-md-4 mt-3 box">
             <img
-              src="/img/aktivitas1.png"
+              src="img/aktivitas1.png"
               class="img-fluid"
               alt="img-aktivitas-1"
             />
           </div>
           <div class="col-md-4 mt-3 box">
             <img
-              src="/img/aktivitas2.png"
+              src="img/aktivitas2.png"
               class="img-fluid"
               alt="img-aktivitas-2"
             />
           </div>
           <div class="col-md-4 mt-3 box">
             <img
-              src="/img/aktivitas3.png"
+              src="img/aktivitas3.png"
               class="img-fluid"
               alt="img-aktivitas-3"
             />
           </div>
           <div class="col-md-4 mt-3 box">
             <img
-              src="/img/aktivitas4.png"
+              src="img/aktivitas4.png"
               class="img-fluid"
               alt="img-aktivitas-4"
             />
           </div>
           <div class="col-md-4 mt-3 box">
             <img
-              src="/img/aktivitas5.png"
+              src="img/aktivitas5.png"
               class="img-fluid"
               alt="img-aktivitas-5"
             />
           </div>
           <div class="col-md-4 mt-3 box">
             <img
-              src="/img/aktivitas6.png"
+              src="img/aktivitas6.png"
               class="img-fluid"
               alt="img-aktivitas-6"
             />
