--- a/fasilitas.html
+++ b/fasilitas.html
@@ -14,7 +14,7 @@
     />
 
     <!-- faveicon -->
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="img/logo.ico" />
 
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
@@ -98,7 +98,7 @@
         </div>
         <div class="row fs-5 mt-3">
           <div class="col-md-12 col-sm-12 col-xs-12 mb-3 fasilitas-img">
-            <img src="/img/fasilitas1.png" alt="img-fasilitas" />
+            <img src="img/fasilitas1.png" alt="img-fasilitas" />
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
       <div class="container mb-5">
         <div class="row fs-5 mt-2">
           <div class="col-md mb-3 visi-misi-img">
-            <img src="/img/fasilitas2.png" alt="img-fasilitas" />
+            <img src="img/fasilitas2.png" alt="img-fasilitas" />
           </div>
           <div class="col-md text-fasilitas-2">
             <h4><span>Fasilitas</span></h4>
