--- a/visi_misi.html
+++ b/visi_misi.html
@@ -14,7 +14,7 @@
     />
 
     <!-- faveicon -->
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="img/logo.ico" />
 
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
@@ -98,7 +98,7 @@
         </div>
         <div class="row fs-5 mt-3">
           <div class="col-md mb-3 visi-misi-img">
-            <img src="/img/visi.png" alt="img-visimisi" />
+            <img src="img/visi.png" alt="img-visimisi" />
           </div>
           <div class="col-md text-visimisi">
             <h3>VISI</h3>
@@ -126,7 +126,7 @@
             </p>
           </div>
           <div class="col-md visi-misi-img">
-            <img src="/img/misi.png" alt="img-visimisi" />
+            <img src="img/misi.png" alt="img-visimisi" />
           </div>
         </div>
       </div>
