--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -14,7 +14,7 @@
     />
 
     <!-- faveicon -->
-    <link rel="icon" type="image/x-icon" href="/img/logo.ico" />
+    <link rel="icon" type="image/x-icon" href="img/logo.ico" />
 
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
@@ -98,7 +98,7 @@
         </div>
         <div class="row fs-5 mt-3">
           <div class="col-md mb-3 tentang-kami-img">
-            <img src="/img/tantangkami.png" alt="img-tentangkami" />
+            <img src="img/tantangkami.png" alt="img-tentangkami" />
           </div>
           <div class="col-md mt-5 text-tentangkami">
             <h3>Rainbow Kids <span>Alauddin</span></h3>
@@ -134,7 +134,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="card konsep_dasar">
             <img
-              src="/img/konsep_tentang_kami.png"
+              src="img/konsep_tentang_kami.png"
               class="card-img-top"
               alt="img-konsep"
             />
