--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="row text">
           <div class="col-md-6">
             <div class="card mb-3">
-              <video src="/img/video1.mp4" controls></video>
+              <video src="img/video1.mp4" controls></video>
               <div class="card-body">
                 <h5 class="card-title">Lokasi Kami</h5>
                 <p class="card-text">
@@ -362,7 +362,7 @@
           </div>
           <div class="col-md-6">
             <div class="card mb-3">
-              <video src="/img/video2.mp4" controls></video>
+              <video src="img/video2.mp4" controls></video>
               <div class="card-body">
                 <h5 class="card-title">Mengajar dengan sepenuh hati</h5>
                 <p class="card-text">
