--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     <section id="kontak">
       <div class="container">
         <div class="row mt-5 text-center">
-          <h2>KON<span>TAK</span></h2>
+          <h2>KONTAK</h2>
         </div>
         <div class="row mt-3">
           <div class="col-md-6 col-sm-12 col-xs-12 mb-3">
