--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="https://www.facebook.com/.../" target="_blank"
               ><i class="fa-brands fa-facebook me-3"></i
             ></a>
-            <a href="https://www.instagram.com/.../" target="_blank"
+            <a href="https://www.instagram.com/rainbowkids.alauddin/" target="_blank"
               ><i class="fa-brands fa-square-instagram me-3"></i
             ></a>
             <a href="https://x.com/..." target="_blank"
