--- a/index.html
+++ b/index.html
@@ -97,14 +97,11 @@
             <a href="#tentang-kami">
               <button class="button-tentang-kami me-3">Tentang Kami</button>
             </a>
-            <a href="https://www.facebook.com/.../" target="_blank"
-              ><i class="fa-brands fa-facebook me-3"></i
+            <a href="https://wa.me/+62 82194448989" target="_blank"
+              ><i class="fa-brands fa-whatsapp me-3"></i
             ></a>
             <a href="https://www.instagram.com/rainbowkids.alauddin/" target="_blank"
               ><i class="fa-brands fa-square-instagram me-3"></i
-            ></a>
-            <a href="https://x.com/..." target="_blank"
-              ><i class="fa-brands fa-square-twitter me-3"></i
             ></a>
           </div>
           <div class="col-md img-hero">
@@ -388,7 +385,7 @@
             <p>Dapatkan <span>Informasi</span></p>
           </div>
           <div class="col-md-6">
-            <a href="https://wa.me/+" class="whatsapp" target="_blank">
+            <a href="https://wa.me/+62 82194448989" class="whatsapp" target="_blank">
               <i class="fa-brands fa-whatsapp"></i>
               Klik disini
             </a>
