--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="#tentang-kami">
               <button class="button-tentang-kami me-3">Tentang Kami</button>
             </a>
-            <a href="https://wa.me/+62 82194448989" target="_blank"
+            <a href="https://wa.me/+6282194448989" target="_blank"
               ><i class="fa-brands fa-whatsapp me-3"></i
             ></a>
             <a href="https://www.instagram.com/rainbowkids.alauddin/" target="_blank"
@@ -464,14 +464,11 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md">
-            <a href="https://www.facebook.com/.../" target="_blank"
-              ><i class="fa-brands fa-facebook me-4"></i
-            ></a>
-            <a href="https://www.instagram.com/.../" target="_blank"
+            <a href="https://www.instagram.com/rainbowkids.alauddin/" target="_blank"
               ><i class="fa-brands fa-square-instagram me-4"></i
             ></a>
-            <a href="https://x.com/..." target="_blank"
-              ><i class="fa-brands fa-square-twitter me-4"></i
+            <a href="https://wa.me/+6282194448989" target="_blank"
+              ><i class="fa-brands fa-whatsapp me-4"></i
             ></a>
           </div>
           <div class="col-md">
