--- a/visi_misi.html
+++ b/visi_misi.html
@@ -138,14 +138,11 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md">
-            <a href="https://www.facebook.com/.../" target="_blank"
-              ><i class="fa-brands fa-facebook me-4"></i
-            ></a>
-            <a href="https://www.instagram.com/.../" target="_blank"
+            <a href="https://www.instagram.com/rainbowkids.alauddin/" target="_blank"
               ><i class="fa-brands fa-square-instagram me-4"></i
             ></a>
-            <a href="https://x.com/..." target="_blank"
-              ><i class="fa-brands fa-square-twitter me-4"></i
+            <a href="https://wa.me/+6282194448989" target="_blank"
+              ><i class="fa-brands fa-whatsapp me-4"></i
             ></a>
           </div>
           <div class="col-md">
