--- a/index.html
+++ b/index.html
@@ -334,7 +334,28 @@
           </div>
           <div class="col-md-4 mt-3 box">
             <img
-              src="img/aktivitas6.png"
+              src="img/aktivitas7.png"
+              class="img-fluid"
+              alt="img-aktivitas-6"
+            />
+          </div>
+          <div class="col-md-4 mt-3 box">
+            <img
+              src="img/aktivitas8.png"
+              class="img-fluid"
+              alt="img-aktivitas-6"
+            />
+          </div>
+          <div class="col-md-4 mt-3 box">
+            <img
+              src="img/aktivitas9.png"
+              class="img-fluid"
+              alt="img-aktivitas-6"
+            />
+          </div>
+          <div class="col-md-4 mt-3 box">
+            <img
+              src="img/aktivitas10.png"
               class="img-fluid"
               alt="img-aktivitas-6"
             />
