--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -134,7 +134,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="card konsep_dasar">
             <img
-              src="img/konsep_tentang_kami.png"
+              src="img/teras.png"
               class="card-img-top"
               alt="img-konsep"
             />
