--- a/index.html
+++ b/index.html
@@ -360,6 +360,27 @@
               alt="img-aktivitas-6"
             />
           </div>
+          <div class="col-md-4 mt-3 box">
+            <img
+              src="img/aktivitas11.png"
+              class="img-fluid"
+              alt="img-aktivitas-6"
+            />
+          </div>
+          <div class="col-md-4 mt-3 box">
+            <img
+              src="img/aktivitas12.png"
+              class="img-fluid"
+              alt="img-aktivitas-6"
+            />
+          </div>
+          <div class="col-md-4 mt-3 box">
+            <img
+              src="img/aktivitas13.png"
+              class="img-fluid"
+              alt="img-aktivitas-6"
+            />
+          </div>
         </div>
       </div>
     </section>
